--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "uploadcomponent",
+  "homepage": " https://vincenzomarcovecchio.github.io/React-Upload-Component/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +11,7 @@
     "design-react-kit": "^3.3.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
     "typeface-lora": "^1.1.13",
